--- a/bcl/index.html
+++ b/bcl/index.html
@@ -13,6 +13,7 @@
         <!-- 标题 -->
         <title>无聊社书面表达对照(BCL)</title>
         <!-- markdown样式，导出自uTools -->
+        <link rel="stylesheet" href="/beta/katex.min.css">
         <style>
             html,
             body {
@@ -708,6 +709,11 @@
 <td>补充；拓展</td>
 </tr>
 <tr>
+<td>Exp</td>
+<td></td>
+<td>（理）实验</td>
+</tr>
+<tr>
 <td>line</td>
 <td>line+NUMBER</td>
 <td>行，行数</td>
@@ -723,7 +729,7 @@
 <td>段落</td>
 </tr>
 <tr>
-<td>pg.; png.</td>
+<td>pic.</td>
 <td></td>
 <td>图</td>
 </tr>
@@ -739,8 +745,18 @@
 </tr>
 <tr>
 <td>#COLOR</td>
-<td>#+COLOR</td>
+<td>#COLOR单个颜色<br/>#COLOR1+COLOR2颜色叠加<br/>#COLOR1&amp;COLOR2颜色相间</td>
 <td>颜色（具体可参考BCL）</td>
+</tr>
+<tr>
+<td>#def</td>
+<td>#def A, B</td>
+<td>宏定义：将A定义为B</td>
+</tr>
+<tr>
+<td><span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msup><mrow></mrow><mtext>△</mtext></msup></mrow><annotation encoding="application/x-tex">^△</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.8491em;"></span><span class="mord"><span></span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.8491em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mtight">△</span></span></span></span></span></span></span></span></span></span></span></td>
+<td></td>
+<td>仅作为了解</td>
 </tr>
 </tbody>
 </table>
@@ -765,7 +781,7 @@
 <td>副词</td>
 </tr>
 <tr>
-<td>ag.; <s>a</s>.</td>
+<td>aj.; <s>a</s>.</td>
 <td>定语</td>
 </tr>
 <tr>
@@ -774,19 +790,31 @@
 </tr>
 <tr>
 <td>av.</td>
-<td>壮语</td>
+<td>状语</td>
 </tr>
 <tr>
 <td>b.</td>
 <td>补语</td>
 </tr>
 <tr>
+<td>bp</td>
+<td>（理）沸点</td>
+</tr>
+<tr>
 <td>conj.; cj.</td>
 <td>连词</td>
 </tr>
 <tr>
+<td>do<br/>doing<br/>did<br/>done</td>
+<td>同v.bf, v.ing, v.ed, v.en<br/>详见「关键字-v.」「修饰符」</td>
+</tr>
+<tr>
 <td>i.</td>
 <td>感叹词；拟声词<br/>【注】一般二者混用，在特殊情况下需用中文标明</td>
+</tr>
+<tr>
+<td>mp</td>
+<td>（理）熔点</td>
 </tr>
 <tr>
 <td>n.</td>
@@ -821,12 +849,24 @@
 <td>代词</td>
 </tr>
 <tr>
+<td>sb.</td>
+<td>某人</td>
+</tr>
+<tr>
 <td>sub.; S</td>
 <td>主语</td>
 </tr>
 <tr>
+<td>st.</td>
+<td>某时</td>
+</tr>
+<tr>
 <td>stc.</td>
 <td>句子；从句</td>
+</tr>
+<tr>
+<td>sth.</td>
+<td>某事物</td>
 </tr>
 <tr>
 <td>t.</td>
@@ -866,15 +906,17 @@
 <thead>
 <tr>
 <th>前置修饰符</th>
-<th>用法</th>
 <th>说明</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td></td>
-<td></td>
-<td></td>
+<td>c.</td>
+<td>可数，常与「n.」连用，可简写为&quot;cn.&quot;</td>
+</tr>
+<tr>
+<td>u.</td>
+<td>不可数，常与「n.」连用，可简写为&quot;un.&quot;</td>
 </tr>
 </tbody>
 </table>
@@ -888,9 +930,49 @@
 </thead>
 <tbody>
 <tr>
+<td><span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msup><mrow></mrow><mo>+</mo></msup><msup><mo separator="true">,</mo><mo>+</mo></msup><msup><mspace linebreak="newline"></mspace><mo>+</mo></msup></mrow><annotation encoding="application/x-tex">^+,^+\\^+</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.9658em;vertical-align:-0.1944em;"></span><span class="mord"><span></span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7713em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mbin mtight">+</span></span></span></span></span></span></span></span><span class="mpunct"><span class="mpunct">,</span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7713em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mbin mtight">+</span></span></span></span></span></span></span></span><span class="mspace" style="margin-right:0.1667em;"></span><span class="mord"><span class="mspace newline"></span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7713em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mbin mtight">+</span></span></span></span></span></span></span></span></span></span></span></td>
+<td>A<span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msup><mrow></mrow><mo>+</mo></msup></mrow><annotation encoding="application/x-tex">^+</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.7713em;"></span><span class="mord"><span></span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7713em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mbin mtight">+</span></span></span></span></span></span></span></span></span></span></span>,B<span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msup><mrow></mrow><mo>+</mo></msup></mrow><annotation encoding="application/x-tex">^+</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.7713em;"></span><span class="mord"><span></span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7713em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mbin mtight">+</span></span></span></span></span></span></span></span></span></span></span><br/>A<span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msup><mrow></mrow><mo>+</mo></msup></mrow><annotation encoding="application/x-tex">^+</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.7713em;"></span><span class="mord"><span></span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7713em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mbin mtight">+</span></span></span></span></span></span></span></span></span></span></span>,B<span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msup><mrow></mrow><mo>+</mo></msup><msup><mspace linebreak="newline"></mspace><mo>+</mo></msup></mrow><annotation encoding="application/x-tex">^+\\^+</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.7713em;"></span><span class="mord"><span></span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7713em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mbin mtight">+</span></span></span></span></span></span></span></span><span class="mord"><span class="mspace newline"></span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7713em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mbin mtight">+</span></span></span></span></span></span></span></span></span></span></span></td>
+<td>A随着B的增加而增加</td>
+</tr>
+<tr>
+<td><span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msup><mrow></mrow><mo>−</mo></msup><msup><mo separator="true">,</mo><mo>−</mo></msup><msup><mspace linebreak="newline"></mspace><mo>−</mo></msup></mrow><annotation encoding="application/x-tex">^-,^-\\^-</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.9658em;vertical-align:-0.1944em;"></span><span class="mord"><span></span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7713em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mbin mtight">−</span></span></span></span></span></span></span></span><span class="mpunct"><span class="mpunct">,</span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7713em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mbin mtight">−</span></span></span></span></span></span></span></span><span class="mspace" style="margin-right:0.1667em;"></span><span class="mord"><span class="mspace newline"></span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7713em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mbin mtight">−</span></span></span></span></span></span></span></span></span></span></span></td>
+<td>A<span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msup><mrow></mrow><mo>−</mo></msup></mrow><annotation encoding="application/x-tex">^-</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.7713em;"></span><span class="mord"><span></span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7713em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mbin mtight">−</span></span></span></span></span></span></span></span></span></span></span>,B<span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msup><mrow></mrow><mo>−</mo></msup></mrow><annotation encoding="application/x-tex">^-</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.7713em;"></span><span class="mord"><span></span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7713em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mbin mtight">−</span></span></span></span></span></span></span></span></span></span></span><br/>A<span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msup><mrow></mrow><mo>−</mo></msup></mrow><annotation encoding="application/x-tex">^-</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.7713em;"></span><span class="mord"><span></span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7713em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mbin mtight">−</span></span></span></span></span></span></span></span></span></span></span>,B<span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msup><mrow></mrow><mo>−</mo></msup><msup><mspace linebreak="newline"></mspace><mo>−</mo></msup></mrow><annotation encoding="application/x-tex">^-\\^-</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.7713em;"></span><span class="mord"><span></span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7713em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mbin mtight">−</span></span></span></span></span></span></span></span><span class="mord"><span class="mspace newline"></span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7713em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mbin mtight">−</span></span></span></span></span></span></span></span></span></span></span></td>
+<td>A随着B的减小而减小</td>
+</tr>
+<tr>
+<td>⤴︎</td>
 <td></td>
+<td>增加；增函数</td>
+</tr>
+<tr>
+<td>⤵︎</td>
 <td></td>
+<td>减少；减函数</td>
+</tr>
+<tr>
+<td>&lt;&lt; &gt;&gt;<br/>&lt; &gt;&lt; &gt;<br/>&lt;/ &gt;</td>
+<td><span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mo>&lt;</mo><mo>&lt;</mo><mi>v</mi><mi mathvariant="normal">.</mi><mi>e</mi><mi>d</mi><mi mathvariant="normal">/</mi><mi>e</mi><mi>n</mi><mo>&gt;</mo><mo>&gt;</mo></mrow><annotation encoding="application/x-tex">&lt;&lt;v.ed/en&gt;&gt;</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.5782em;vertical-align:-0.0391em;"></span><span class="mrel">&lt;&lt;</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord mathnormal" style="margin-right:0.03588em;">v</span><span class="mord">.</span><span class="mord mathnormal">e</span><span class="mord mathnormal">d</span><span class="mord">/</span><span class="mord mathnormal">e</span><span class="mord mathnormal">n</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">&gt;&gt;</span></span></span></span><br/><span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mo>&lt;</mo><mi mathvariant="normal">/</mi><mi>v</mi><mi mathvariant="normal">.</mi><mi>b</mi><mi>f</mi><mo>&gt;</mo><mo>&lt;</mo><mi>v</mi><mi mathvariant="normal">.</mi><mi>e</mi><mi>d</mi><mo>&gt;</mo><mo>&lt;</mo><mi>v</mi><mi mathvariant="normal">.</mi><mi>e</mi><mi>n</mi><mo>&gt;</mo></mrow><annotation encoding="application/x-tex">&lt;/v.bf&gt;&lt;v.ed&gt;&lt;v.en&gt;</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.5782em;vertical-align:-0.0391em;"></span><span class="mrel">&lt;</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord">/</span><span class="mord mathnormal" style="margin-right:0.03588em;">v</span><span class="mord">.</span><span class="mord mathnormal">b</span><span class="mord mathnormal" style="margin-right:0.10764em;">f</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">&gt;&lt;</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:0.7335em;vertical-align:-0.0391em;"></span><span class="mord mathnormal" style="margin-right:0.03588em;">v</span><span class="mord">.</span><span class="mord mathnormal">e</span><span class="mord mathnormal">d</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">&gt;&lt;</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:0.5782em;vertical-align:-0.0391em;"></span><span class="mord mathnormal" style="margin-right:0.03588em;">v</span><span class="mord">.</span><span class="mord mathnormal">e</span><span class="mord mathnormal">n</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">&gt;</span></span></span></span><br/><span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mo>&lt;</mo><mi>v</mi><mi mathvariant="normal">.</mi><mi>i</mi><mi>n</mi><mi>g</mi><mo>&gt;</mo><msup><mspace linebreak="newline"></mspace><mi>i</mi></msup><msup><mspace linebreak="newline"></mspace><mi>n</mi></msup><msup><mspace linebreak="newline"></mspace><mi>g</mi></msup></mrow><annotation encoding="application/x-tex">&lt;v.ing&gt;\\^i\\^n\\^g</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.5782em;vertical-align:-0.0391em;"></span><span class="mrel">&lt;</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:0.854em;vertical-align:-0.1944em;"></span><span class="mord mathnormal" style="margin-right:0.03588em;">v</span><span class="mord">.</span><span class="mord mathnormal">in</span><span class="mord mathnormal" style="margin-right:0.03588em;">g</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">&gt;</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:0.8247em;"></span><span class="mord"><span class="mspace newline"></span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.8247em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight">i</span></span></span></span></span></span></span></span><span class="mord"><span class="mspace newline"></span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.6644em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight">n</span></span></span></span></span></span></span></span><span class="mord"><span class="mspace newline"></span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.6644em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight" style="margin-right:0.03588em;">g</span></span></span></span></span></span></span></span></span></span></span> 等</td>
+<td>动词的过去式与过去分词或原型或其他形式；<br/>有时可用于其他词性</td>
+</tr>
+<tr>
+<td>X</td>
+<td>XA</td>
+<td>非A；不是A；排除A</td>
+</tr>
+<tr>
+<td>=</td>
 <td></td>
+<td>（文）同义词</td>
+</tr>
+<tr>
+<td>≠</td>
+<td></td>
+<td>（文）反义词</td>
+</tr>
+<tr>
+<td>=\=</td>
+<td></td>
+<td>（文）不是；易混淆于（也可用&quot;~&quot;）</td>
 </tr>
 </tbody>
 </table>
