rspid v2 	new file:   alpha/rspidv2/allscript.js 	deleted:    alpha/rspidv2/checkrspid.js 	modified:   alpha/rspidv2/createrspid.html 	deleted:    alpha/rspidv2/createrspid.js 	modified:   alpha/rspidv2/index.html

--- a/alpha/rspidv2/createrspid.html
+++ b/alpha/rspidv2/createrspid.html
@@ -644,13 +644,11 @@
             <p>
                 型号:
                 <input
-                    size="7"
+                    size="20"
                     id="xh"
-                    type="text"
-                    maxlength="5" />
-                范围:A~Z,0~9；不超过五个字符
+                    type="text" />
             </p>
-            <p>
+            <!-- <p>
                 代号:
                 <input
                     size="2"
@@ -658,7 +656,8 @@
                     type="text"
                     maxlength="2" />
                 范围:00~99；两个字符
-            </p>
+            </p> -->
+            <!-- 将在rspidv2中弃用 -->
             <p id="rand">
                 随机码:
                 <input
@@ -703,6 +702,6 @@
                     id="output"></code>
             </p>
         </article>
-        <script src="createrspid.js"></script>
+        <script src="allscript.js"></script>
     </body>
 </html>
