--- a/alpha/rspidv2/index.html
+++ b/alpha/rspidv2/index.html
@@ -571,7 +571,7 @@
             <!-- <p><u><a href="/index.html" style="font-size: 1.1em"><strong>←返回主页</strong></a></u></p> -->
             <h1>产品识别码验证系统</h1>
             <blockquote style="border-width: 0.16em">
-                示例:<code>51231130152930002619332046014</code>。
+                <!-- 示例:<code>51231130152930002619332046014</code>。 -->
                 <p style="padding: 0.35em 1.15em; color: #bababa">RISINGSUN Project ID version 2</p>
             </blockquote>
             <h4>
@@ -585,8 +585,7 @@
                 <input
                     type="text"
                     id="pid"
-                    size="29"
-                    maxlength="29" />
+                    size="29" />
                 <input
                     type="button"
                     value="验证"
@@ -602,6 +601,6 @@
             <p style="line-height: 0.3em">时间：<a id="sj"></a></p>
             <!-- id名为对应拼音首字母：状态，类型，品牌，型号，时间 -->
         </article>
-        <script src="checkrspid.js"></script>
+        <script src="allscript.js"></script>
     </body>
 </html>
