初步完成创建RSPID的逻辑 rspidv2 有一些地方有bug，要改 	modified:   .gitignore 	modified:   alpha/rspidv2/allscript.js 	modified:   alpha/rspidv2/createrspid.html 	modified:   alpha/rspidv2/table.json

--- a/alpha/rspidv2/createrspid.html
+++ b/alpha/rspidv2/createrspid.html
@@ -657,7 +657,7 @@
                     maxlength="2" />
                 范围:00~99；两个字符
             </p> -->
-            <!-- 将在rspidv2中弃用 -->
+            <!-- 在rspidv2中弃用 -->
             <p id="rand">
                 随机码:
                 <input
@@ -686,7 +686,7 @@
                 <input
                     type="button"
                     value="生成RSPID"
-                    onclick="creat()"
+                    onclick="create()"
                     style="font-size: 1.4em; font-weight: 550; margin-right: 0.5em" />
                 <input
                     type="button"
