--- a/pid/index.html
+++ b/pid/index.html
@@ -600,6 +600,16 @@
             <p style="line-height: 0.3em">型号：<a id="xh"></a></p>
             <p style="line-height: 0.3em">时间：<a id="sj"></a></p>
             <!-- id名为对应拼音首字母：状态，类型，品牌，型号，时间 -->
+            <br/>
+            <blockquote>RS-PID System v2 正在开发……</blockquote>
+            <a href="old/index.html">前往旧版(RSPID-29(2023))↗</a>
+            <hr style="height: 0.05em;"/>
+            <p>
+                <a href="#top" style="font-size: 1.1em"><strong>⤒返回顶部</strong></a>
+            </p>
+            <p>
+                <a href="/donate.png" target="_blank">💰资助本站:D</a>
+            </p>
         </article>
         <script src="allscript.js"></script>
     </body>
