--- a/pid/index.html
+++ b/pid/index.html
@@ -585,7 +585,7 @@
                 <input
                     type="text"
                     id="pid"
-                    size="29" />
+                    size="25" />
                 <input
                     type="button"
                     value="验证"
@@ -601,9 +601,13 @@
             <p style="line-height: 0.3em">时间：<a id="sj"></a></p>
             <!-- id名为对应拼音首字母：状态，类型，品牌，型号，时间 -->
             <br/>
-            <blockquote>RS-PID System v2 正在开发……</blockquote>
-            <a href="old/index.html">前往旧版(RSPID-29(2023))↗</a>
+            <h3>RSPIDv2介绍</h3>
+            <img src="image/rspidv2-illustrate.jpg" title="rspidv2-illustrate" style="width: 400px;"/>
             <hr style="height: 0.05em;"/>
+            <label style="color:#757575;"><input type="checkbox" id="ignoreError" checked="false"/> [Debug]检测到错误时强制输出结果</label>
+            <a id="t"></a>
+            <hr style="height: 0.05em;"/>
+            <a href="old/index.html">↗前往旧版(RSPID-29(2023))</a>
             <p>
                 <a href="#top" style="font-size: 1.1em"><strong>⤒返回顶部</strong></a>
             </p>
