u 	modified:   pid/allscript.js 	modified:   pid/createrspid.html 	new file:   pid/image/icon1.png 	new file:   pid/image/icon2.png 	modified:   pid/index.html 	modified:   sitemap.json

--- a/pid/createrspid.html
+++ b/pid/createrspid.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" id="viewport" name="viewport" content="width=device-width, initial-scale=1" />
     <!-- iOS web app -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <link rel="apple-touch-icon-precomposed" href="icon.png" sizes="1024x1024" />
+    <link rel="apple-touch-icon-precomposed" href="image/icon2.png" sizes="1024x1024" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <title>生成产品识别码(RSPID)</title>
 
