--- a/pid/index.html
+++ b/pid/index.html
@@ -582,7 +582,7 @@
         <h4>
             下方输入RSPID：<input type="button" value="粘贴" onclick="paste()"
                 style="font-weight: 400; font-size: 1em; margin-left: 0em" />
-            <input type="button" value="扫码二维码" onclick="scanQR()"
+            <input type="button" value="扫描二维码" onclick="scanQR()"
                 style="font-weight: 400; font-size: 1em; margin-left: 0.3em" />
         </h4>
         <p>
