--- a/index.html
+++ b/index.html
@@ -600,9 +600,9 @@
             </p>
             <p>
                 <a
-                    href="https://github.com/risingsun517/risingsun517.github.io"
+                    href="https://github.com/rs9c/rs9c.github.io"
                     target="_blank"
-                    >↗直击本仓库(risingsun517/risingsun517.github.io)</a
+                    >↗直击本仓库(rs9c/rs9c.github.io)</a
                 ><br>
                 <a
                     href="/donate.png"
