--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             id="viewport"
             name="viewport"
             content="width=device-width, initial-scale=1" />
-        <title>不欢迎来到risingsun517.github.io</title>
+        <title>不欢迎来到rs9c.github.io</title>
 
         <style>
             html,
@@ -570,7 +570,7 @@
         <article class="markdown-body">
             <h1>主页</h1>
             <blockquote>
-                Here's risingsun517.github.io!
+                Here's rs9c.github.io!
                 <h3 style="font-size: 1em">你来这里干啥◐‿◑</h3>
             </blockquote>
             <h2>网站导航🧭</h2>
