--- a/bcl/index.html
+++ b/bcl/index.html
@@ -576,15 +576,14 @@
 <body>
     <article class="markdown-body">
         <blockquote >
-            <a style="font-size: 1.2em;color: red;">注意！以下内容不再更新！</a>
+            <a style="font-size: 1.2em;color: red;">敬请期待……</a>
             
             <br/>
-            <a style="font-size: 1em;color: #24292e;">请期待最新的「表达法」，预计2025年初编写完成。:D</a>
+            <a style="font-size: 1em;color: #24292e;">请期待最新的「表达法」，预计2025年编写完成。:D</a>
         </blockquote>
         <h3>快速前往</h3>
         <ol>
             <li><a href="#1">无聊社书面表达法</a></li>
-            <li><a href="#2">无聊社语</a></li>
         </ol>
         <hr>
         <h2><span id="1">无聊社书面表达法</span></h2>
@@ -1385,26 +1384,6 @@
                 </tr>
             </tbody>
         </table>
-        <hr>
-        <h2><span id="2">无聊社语(BCL)</span></h2>
-        <blockquote>
-            <p>此部分正逐渐完善……以下内容较为抽象，请酌（不）情（要）理解。</p>
-        </blockquote>
-        <table>
-            <thead>
-                <tr>
-                    <th>BCL</th>
-                    <th>用法/释义</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
-
 
         <!-- 网页底部 -->
         <hr />
