增加 聊天区 入口

--- a/pid/index.html
+++ b/pid/index.html
@@ -608,7 +608,8 @@
             <a href="#top" style="font-size: 1.1em"><strong>⤒返回顶部</strong></a>
         </p>
         <p>
-            <a href="/donate.png" target="_blank">💰资助本站:D</a>
+            <a href="/donate.png" target="_blank">💰资助本站:D</a> | 
+            <a href="https://github.com/rs9c/rs9c.github.io/discussions/2" target="_blank">💬聊天区</a>
         </p>
     </article>
     <script src="allscript.js"></script>
