--- a/bcl/index.html
+++ b/bcl/index.html
@@ -1391,7 +1391,8 @@
             <a href="#top" style="font-size: 1.1em"><strong>⤒返回顶部</strong></a>
         </p>
         <p>
-            <a href="/donate.png" target="_blank">💰资助本站:D</a>
+            <a href="/donate.png" target="_blank">💰资助本站:D</a> | 
+            <a href="https://github.com/rs9c/rs9c.github.io/discussions/2" target="_blank">💬聊天区</a>
         </p>
     </article>
     <script></script>
