--- a/bcl/index.html
+++ b/bcl/index.html
@@ -575,11 +575,12 @@
 
 <body>
     <article class="markdown-body">
-        <blockquote >
+        <blockquote>
             <a style="font-size: 1.2em;color: red;">敬请期待……</a>
             
             <br/>
-            <a style="font-size: 1em;color: #24292e;">请期待最新的「表达法」，预计2025年编写完成。:D</a>
+            <a style="font-size: 1em;color: #24292e;">请期待最新的「表达法」，预计2025年编写完成。:D</a><br/>
+            <a style="font-size: 1em;color: #0080ff;" href="https://github.com/rs9c/BoringClub_Written_Expression_Method">↗ 前往本仓库做贡献</a>
         </blockquote>
         <h3>快速前往</h3>
         <ol>
