--- a/bcl/index.html
+++ b/bcl/index.html
@@ -580,7 +580,7 @@
             
             <br/>
             <a style="font-size: 1em;color: #24292e;">请期待最新的「表达法」，预计2025年编写完成。:D</a><br/>
-            <a style="font-size: 1em;color: #0080ff;" href="https://github.com/rs9c/BoringClub_Written_Expression_Method">↗ 前往本仓库做贡献</a>
+            <a style="font-size: 1em;color: #0080ff;" href="https://github.com/rs9c/BoringClub_Written_Expression_Method" target="_blank">↗ 前往本仓库做贡献</a>
         </blockquote>
         <h3>快速前往</h3>
         <ol>
