弃用“扫描二维码”功能

--- a/bcl/index.html
+++ b/bcl/index.html
@@ -581,6 +581,7 @@
             <br/>
             <a style="font-size: 1em;color: #24292e;">请期待最新的「表达法」，预计2025年编写完成。:D</a><br/>
             <a style="font-size: 1em;color: #0080ff;" href="https://github.com/rs9c/BoringClub_Written_Expression_Method" target="_blank">↗ 前往本仓库做贡献</a>
+            <br/><a style="font-size: 1em;color: #24292e;">以下内容停止更新</a>
         </blockquote>
         <h3>快速前往</h3>
         <ol>
