--- a/pid/index.html
+++ b/pid/index.html
@@ -582,8 +582,6 @@
         <h4>
             下方输入RSPID：<input type="button" value="粘贴" onclick="paste()"
                 style="font-weight: 400; font-size: 1em; margin-left: 0em" />
-            <input type="button" value="扫描二维码" onclick="scanQR()"
-                style="font-weight: 400; font-size: 1em; margin-left: 0.3em" />
         </h4>
         <p>
             <input type="text" id="pid" size="25" />
@@ -601,7 +599,7 @@
         <h3>RSPIDv2介绍</h3>
         <img src="image/rspidv2-illustrate.jpg" title="rspidv2-illustrate" style="width: 400px;" />
         <hr style="height: 0.05em;" />
-        <label style="color:#757575;"><input type="checkbox" id="ignoreError" /> [Debug]检测到错误时强制输出结果</label>
+        <label style="color:#757575;"><input type="checkbox" id="ignoreError" checked/> [Debug]检测到错误时强制输出结果</label>
         <hr style="height: 0.05em;" />
         <a href="old/index.html">↗前往旧版(RSPID-29(2023))</a>
         <p>
