--- a/pid/index.html
+++ b/pid/index.html
@@ -577,7 +577,7 @@
         <h1>产品识别码验证系统</h1>
         <blockquote style="border-width: 0.16em">
             <!-- 示例:<code>51231130152930002619332046014</code>。 -->
-            <p style="padding: 0.35em 1.15em; color: #bababa">RISINGSUN Project ID version 2</p>
+            <p style="padding: 0.35em 1.15em; color: #bababa">RISINGSUN Product ID version 2</p>
         </blockquote>
         <h4>
             下方输入RSPID：<input type="button" value="粘贴" onclick="paste()"
