RSPID：36进制--185进制 更高的压缩比:D 	modified:   pid/allscript.js 	modified:   pid/index.html

--- a/pid/index.html
+++ b/pid/index.html
@@ -599,7 +599,7 @@
         <h3>RSPIDv2介绍</h3>
         <img src="image/rspidv2-illustrate.jpg" title="rspidv2-illustrate" style="width: 400px;" />
         <br/>
-        <a style="color:#919191;">ps: 2024/11 引入了36进制的RSPID，看起来和上面毫无关系。例如“4YUCGSBRULNHT17XF36”转换为10进制就是“51240616200023262677737924002”。</a>
+        <a style="color:#919191;">ps: 2024/11 引入了多进制的RSPID，看起来和上面毫无关系。例如“vÑPêẞæĘâûMUrw”转换为10进制就是“51240616200023262677737924002”。</a>
         <hr style="height: 0.05em;" />
         <label style="color:#757575;"><input type="checkbox" id="ignoreError" checked/> [Debug]检测到错误时强制输出结果</label>
         <hr style="height: 0.05em;" />
