--- a/pid/index.html
+++ b/pid/index.html
@@ -598,17 +598,18 @@
         <!-- id名为对应拼音首字母：状态，类型，品牌，型号，时间 -->
         <h3>RSPIDv2介绍</h3>
         <img src="image/rspidv2-illustrate.jpg" title="rspidv2-illustrate" style="width: 400px;" />
-        <br/>
-        <a style="color:#919191;">ps: 2024/11 引入了多进制的RSPID，看起来和上面毫无关系。例如“vÑPêẞæĘâûMUrw”转换为10进制就是“51240616200023262677737924002”。</a>
+        <br />
+        <a style="color:#919191;">ps: 2024/11
+            引入了多进制的RSPID，看起来和上面毫无关系。例如“ƻṦⱤⱴǑⱨĝΜȞṞ”转换为10进制就是“51240616200023262677737924002”。</a>
         <hr style="height: 0.05em;" />
-        <label style="color:#757575;"><input type="checkbox" id="ignoreError" checked/> [Debug]检测到错误时强制输出结果</label>
+        <label style="color:#757575;"><input type="checkbox" id="ignoreError" checked /> [Debug]检测到错误时强制输出结果</label>
         <hr style="height: 0.05em;" />
         <a href="old/index.html">↗前往旧版(RSPID-29(2023))</a>
         <p>
             <a href="#top" style="font-size: 1.1em"><strong>⤒返回顶部</strong></a>
         </p>
         <p>
-            <a href="/donate.png" target="_blank">💰资助本站:D</a> | 
+            <a href="/donate.png" target="_blank">💰资助本站:D</a> |
             <a href="https://github.com/rs9c/rs9c.github.io/discussions/2" target="_blank">💬聊天区</a>
         </p>
     </article>
