BCL, 404page: 放弃更新bcl; 更改404页播放源。 	modified:   404.html 	deleted:    bcl/index.html 	modified:   sitemap.json

--- a/404.html
+++ b/404.html
@@ -600,7 +600,7 @@
     <script>
         document.getElementById('fullscreen-btn').addEventListener('click', function () {
             document.getElementById('video-container').innerHTML = `<iframe
-                        src="//www.bilibili.com/blackboard/html5mobileplayer.html?isOutside=true&aid=1706416465&bvid=BV1UT42167xb&cid=1641702404&p=1&autoplay=1&muted=0&danmaku=0"
+                        src="//www.bilibili.com/blackboard/html5mobileplayer.html?isOutside=true&bvid=BV1GJ411x7h7&p=1&autoplay=1&muted=0&danmaku=0"
                         scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="1" sandbox="allow-top-navigation allow-same-origin allow-forms allow-scripts"></iframe>
                 `;
             var videoContainer = document.getElementById('video-container');
