--- a/pid/createrspid.html
+++ b/pid/createrspid.html
@@ -636,7 +636,7 @@
                 结果：
                 <br />
                 <code style="font-size: 1.1em" id="output"></code>
-                <div id="qr1"></div>
+                <!-- <div id="qr1"></div> -->
                 <br />
                 <code style="font-size: 1.1em" id="output36"></code>
             </p>
